--- a/_includes/navbar-colored-bg.html
+++ b/_includes/navbar-colored-bg.html
@@ -7,7 +7,7 @@
     class="h-full w-fit" id="logo" />
   </a>
 
-  <a href="{{site.url}}/#oam">AutoML</a>
+  <a href="{{site.url}}/#chemengine">Chem Engine</a>
   <a href="https://beta.oloren.ai">Analysis Suite</a>
   <a href="{{site.url}}/#blogs">Blogs</a>
 </section>
