kelly-home-page

--- a/_includes/navbar-colored-bg.html
+++ b/_includes/navbar-colored-bg.html
@@ -7,7 +7,8 @@
     class="h-full w-fit" id="logo" />
   </a>
 
-  <a href="{{site.url}}/#chemengine">Chem Engine</a>
-  <a href="https://beta.oloren.ai">Analysis Suite</a>
+  <a href="{{site.url}}/#chemengine">Technology</a>
+  <a href="https://beta.oloren.ai">Products</a>
+  <a href="{{site.url}}/#demo">Demo</a>
   <a href="{{site.url}}/#blogs">Blogs</a>
 </section>
