--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.oloren-gradient{
+    background: linear-gradient(52.03deg, #0D57ED 40.77%, #6843D8 82.17%);
+}
+
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200..900');
 
