--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,15 @@
     <title>{{ page.title }} - {{ site.title }}</title>
     <link rel="stylesheet" href="{{ "assets/css/main.css" | relative_url }}">
     <link rel="stylesheet" href="{{ "assets/css/style.css" | relative_url }}">
+    <script src="https://unpkg.com/feather-icons"></script>
   </head>
   <body class="bg-white text-black">
     {{ content }}
+
+    <script>
+      feather.replace()
+    </script>
+
   </body>
 </html>
 
