--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -379,16 +379,16 @@ html {
 }
 
 :root {
-  --p: 220 81% 51%;
-  --pf: 220 81% 41%;
-  --sf: 255 66% 44%;
+  --p: 220 78% 23%;
+  --pf: 220 78% 19%;
+  --sf: 219 33% 33%;
   --af: 137 67% 46%;
   --nf: 0 0% 74%;
   --b2: 0 0% 90%;
   --b3: 0 0% 81%;
   --bc: 0 0% 20%;
-  --pc: 220 100% 90%;
-  --sc: 255 100% 91%;
+  --pc: 220 100% 85%;
+  --sc: 219 100% 88%;
   --ac: 137 100% 11%;
   --nc: 0 0% 19%;
   --inc: 0 0% 20%;
@@ -405,7 +405,7 @@ html {
   --border-btn: 1px;
   --tab-border: 1px;
   --tab-radius: 0.5rem;
-  --s: 255 66% 55%;
+  --s: 219 33% 42%;
   --a: 137 67% 57%;
   --n: 0 0% 93%;
   --b1: 0 0% 100%;
@@ -1686,48 +1686,32 @@ body[dir="rtl"] .checkbox:checked,
 .prose :where(tbody tr, thead):not(:where([class~="not-prose"] *)) {
   border-bottom-color: hsl(var(--bc) / 20%);
 }
-.absolute {
-  position: absolute;
-}
-.right-0 {
-  right: 0px;
-}
-.bottom-0 {
-  bottom: 0px;
-}
-.top-0 {
-  top: 0px;
-}
 .m-auto {
   margin: auto;
 }
 .m-0 {
   margin: 0px;
 }
-.m-4 {
-  margin: 1rem;
-}
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
 }
-.\!my-auto {
-  margin-top: auto !important;
-  margin-bottom: auto !important;
-}
-.mx-4 {
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
 .mx-8 {
   margin-left: 2rem;
   margin-right: 2rem;
+}
+.\!my-auto {
+  margin-top: auto !important;
+  margin-bottom: auto !important;
 }
 .mt-6 {
   margin-top: 1.5rem;
 }
 .mt-4 {
   margin-top: 1rem;
+}
+.ml-1 {
+  margin-left: 0.25rem;
 }
 .-mb-8 {
   margin-bottom: -2rem;
@@ -1747,18 +1731,6 @@ body[dir="rtl"] .checkbox:checked,
 .-mb-4 {
   margin-bottom: -1rem;
 }
-.ml-auto {
-  margin-left: auto;
-}
-.mr-auto {
-  margin-right: auto;
-}
-.mr-0 {
-  margin-right: 0px;
-}
-.ml-1 {
-  margin-left: 0.25rem;
-}
 .flex {
   display: flex;
 }
@@ -1771,40 +1743,22 @@ body[dir="rtl"] .checkbox:checked,
 .h-full {
   height: 100%;
 }
+.h-\[48em\] {
+  height: 48em;
+}
 .h-fit {
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
 }
-.h-48 {
-  height: 12rem;
-}
-.h-\[100\%\] {
-  height: 100%;
-}
-.h-4 {
-  height: 1rem;
-}
-.h-8 {
-  height: 2rem;
-}
 .h-10 {
   height: 2.5rem;
 }
-.h-96 {
-  height: 24rem;
-}
-.h-\[48em\] {
-  height: 48em;
-}
-.h-12 {
-  height: 3rem;
-}
-.h-6 {
-  height: 1.5rem;
-}
 .h-5 {
   height: 1.25rem;
+}
+.h-48 {
+  height: 12rem;
 }
 .w-screen {
   width: 100vw;
@@ -1817,11 +1771,14 @@ body[dir="rtl"] .checkbox:checked,
   width: -moz-fit-content;
   width: fit-content;
 }
+.w-full {
+  width: 100%;
+}
 .w-1\/2 {
   width: 50%;
 }
-.w-full {
-  width: 100%;
+.w-10 {
+  width: 2.5rem;
 }
 .w-auto {
   width: auto;
@@ -1829,35 +1786,11 @@ body[dir="rtl"] .checkbox:checked,
 .w-4\/5 {
   width: 80%;
 }
-.w-1\/4 {
-  width: 25%;
-}
-.w-1\/3 {
-  width: 33.333333%;
-}
-.w-\[87\.5\%\] {
-  width: 87.5%;
-}
-.w-4 {
-  width: 1rem;
-}
-.w-8 {
-  width: 2rem;
-}
-.w-10 {
-  width: 2.5rem;
+.max-w-7xl {
+  max-width: 80rem;
 }
 .max-w-none {
   max-width: none;
-}
-.max-w-4xl {
-  max-width: 56rem;
-}
-.max-w-6xl {
-  max-width: 72rem;
-}
-.max-w-7xl {
-  max-width: 80rem;
 }
 .grow {
   flex-grow: 1;
@@ -1876,9 +1809,6 @@ body[dir="rtl"] .checkbox:checked,
 }
 .items-center {
   align-items: center;
-}
-.justify-start {
-  justify-content: flex-start;
 }
 .justify-between {
   justify-content: space-between;
@@ -1903,6 +1833,11 @@ body[dir="rtl"] .checkbox:checked,
   margin-right: calc(2rem * var(--tw-space-x-reverse));
   margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
 }
+.space-y-8 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
+}
 .space-y-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1913,6 +1848,21 @@ body[dir="rtl"] .checkbox:checked,
   margin-right: calc(0.75rem * var(--tw-space-x-reverse));
   margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
 }
+.space-y-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+.space-y-10 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(2.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
+}
+.space-y-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
 .space-y-1 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1922,41 +1872,6 @@ body[dir="rtl"] .checkbox:checked,
   --tw-space-x-reverse: 0;
   margin-right: calc(4rem * var(--tw-space-x-reverse));
   margin-left: calc(4rem * calc(1 - var(--tw-space-x-reverse)));
-}
-.space-y-3 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
-}
-.space-y-8 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
-}
-.space-y-10 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(2.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
-}
-.space-x-1 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.25rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
-}
-.space-x-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-.space-x-4 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1rem * var(--tw-space-x-reverse));
-  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
-}
-.space-y-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 .rounded-lg {
   border-radius: 0.5rem;
@@ -1992,24 +1907,17 @@ body[dir="rtl"] .checkbox:checked,
   --tw-bg-opacity: 1;
   background-color: rgb(246 249 254 / var(--tw-bg-opacity));
 }
-.object-contain {
-  -o-object-fit: contain;
-     object-fit: contain;
-}
 .p-3 {
   padding: 0.75rem;
-}
-.p-4 {
-  padding: 1rem;
-}
-.p-1 {
-  padding: 0.25rem;
 }
 .p-px {
   padding: 1px;
 }
 .p-0 {
   padding: 0px;
+}
+.p-4 {
+  padding: 1rem;
 }
 .px-6 {
   padding-left: 1.5rem;
@@ -2031,50 +1939,32 @@ body[dir="rtl"] .checkbox:checked,
   padding-top: 6rem;
   padding-bottom: 6rem;
 }
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-.px-11 {
-  padding-left: 2.75rem;
-  padding-right: 2.75rem;
-}
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
-}
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
 }
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
 }
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
 .pr-4 {
   padding-right: 1rem;
-}
-.pb-4 {
-  padding-bottom: 1rem;
 }
 .pl-2 {
   padding-left: 0.5rem;
 }
-.pl-1 {
-  padding-left: 0.25rem;
+.pb-4 {
+  padding-bottom: 1rem;
 }
 .text-left {
   text-align: left;
 }
 .text-center {
   text-align: center;
-}
-.align-middle {
-  vertical-align: middle;
 }
 .text-4xl {
   font-size: 2.25rem;
@@ -2117,17 +2007,21 @@ body[dir="rtl"] .checkbox:checked,
 .leading-none {
   line-height: 1;
 }
-.text-\[\#525252\] {
+.text-secondary {
   --tw-text-opacity: 1;
-  color: rgb(82 82 82 / var(--tw-text-opacity));
+  color: hsl(var(--s) / var(--tw-text-opacity));
 }
-.text-black {
+.text-primary {
   --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
+  color: hsl(var(--p) / var(--tw-text-opacity));
 }
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 .underline {
   -webkit-text-decoration-line: underline;
@@ -2284,26 +2178,8 @@ img {
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
-.child\:rounded-md > * {
-  border-radius: 0.375rem;
-}
-
-.child\:rounded-lg > * {
-  border-radius: 0.5rem;
-}
-
 .child\:rounded-xl > * {
   border-radius: 0.75rem;
-}
-
-.child\:px-11 > * {
-  padding-left: 2.75rem;
-  padding-right: 2.75rem;
-}
-
-.child\:py-2 > * {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
 }
 
 @media (min-width: 768px) {
@@ -2320,24 +2196,12 @@ img {
     width: 33.333333%;
   }
 
-  .md\:max-w-5xl {
-    max-width: 64rem;
-  }
-
-  .md\:max-w-6xl {
-    max-width: 72rem;
-  }
-
   .md\:max-w-7xl {
     max-width: 80rem;
   }
 
   .md\:flex-row {
     flex-direction: row;
-  }
-
-  .md\:flex-col {
-    flex-direction: column;
   }
 
   .md\:justify-between {
