--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1704,6 +1704,10 @@ body[dir="rtl"] .checkbox:checked,
   margin-top: auto !important;
   margin-bottom: auto !important;
 }
+.mx-0 {
+  margin-left: 0px;
+  margin-right: 0px;
+}
 .mt-6 {
   margin-top: 1.5rem;
 }
@@ -1730,6 +1734,9 @@ body[dir="rtl"] .checkbox:checked,
 }
 .-mb-4 {
   margin-bottom: -1rem;
+}
+.mr-0 {
+  margin-right: 0px;
 }
 .flex {
   display: flex;
@@ -1785,6 +1792,12 @@ body[dir="rtl"] .checkbox:checked,
 }
 .w-4\/5 {
   width: 80%;
+}
+.w-1\/3 {
+  width: 33.333333%;
+}
+.w-2\/5 {
+  width: 40%;
 }
 .max-w-7xl {
   max-width: 80rem;
@@ -1884,6 +1897,9 @@ body[dir="rtl"] .checkbox:checked,
 }
 .rounded-2xl {
   border-radius: 1rem;
+}
+.rounded-\[11px\] {
+  border-radius: 11px;
 }
 .border-2 {
   border-width: 2px;
