--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2589,6 +2589,12 @@ img {
     margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
+  .lg\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0px * var(--tw-space-y-reverse));
+  }
+
   .lg\:py-60 {
     padding-top: 15rem;
     padding-bottom: 15rem;
