--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1816,6 +1816,9 @@ body[dir="rtl"] .checkbox:checked,
 .h-\[600px\] {
   height: 600px;
 }
+.h-96 {
+  height: 24rem;
+}
 .w-full {
   width: 100%;
 }
@@ -1847,6 +1850,9 @@ body[dir="rtl"] .checkbox:checked,
 }
 .w-\[125\%\] {
   width: 125%;
+}
+.w-\[55\%\] {
+  width: 55%;
 }
 .max-w-7xl {
   max-width: 80rem;
@@ -2349,6 +2355,11 @@ img {
   color: hsl(var(--p) / var(--tw-text-opacity));
 }
 
+.prose-strong\:text-secondary :is(:where(strong):not(:where([class~="not-prose"] *))) {
+  --tw-text-opacity: 1;
+  color: hsl(var(--s) / var(--tw-text-opacity));
+}
+
 .child\:flex > * {
   display: flex;
 }
@@ -2646,6 +2657,10 @@ img {
 
   .lg\:w-1\/3 {
     width: 33.333333%;
+  }
+
+  .lg\:w-2\/3 {
+    width: 66.666667%;
   }
 
   .lg\:grid-cols-3 {
