Finished all blog sites

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
           <a href="{{site.url}}/#technology">Technology</a>
           <a href="{{site.url}}/#products">Products</a>
           <a href="https://beta.oloren.ai">Demo</a>
-          <a href="{{site.url}}/#blogs">Blog</a>
+          <a href="{{site.url}}/blogs">Blog</a>
           <a
             class="olorengradient h-fit w-fit rounded-xl p-px"
             href="mailto:contact@oloren.ai"
