--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2392,6 +2392,10 @@ img {
 
 @media (min-width: 768px) {
 
+  .md\:grid {
+    display: grid;
+  }
+
   .md\:w-3\/4 {
     width: 75%;
   }
@@ -2400,8 +2404,21 @@ img {
     max-width: 80rem;
   }
 
+  .md\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
   .md\:flex-row {
     flex-direction: row;
+  }
+
+  .md\:gap-x-6 {
+    -moz-column-gap: 1.5rem;
+         column-gap: 1.5rem;
+  }
+
+  .md\:gap-y-12 {
+    row-gap: 3rem;
   }
 
   .md\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
