buttons are interactive

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@
             class="olorengradient h-fit w-fit rounded-xl p-px"
             href="mailto:contact@oloren.ai"
           >
-            <div class="rounded-[11px] bg-white px-5 py-3">Contact Us</div>
+            <div class="outline-button rounded-[11px] bg-white px-5 py-3">Contact Us</div>
           </a>
         </ul>
       </section>
@@ -82,7 +82,7 @@
       </div>
 
       <button class="olorengradient h-fit w-fit rounded-xl p-px">
-        <div class="rounded-[11px] bg-[#F6F9FE] px-8 py-3">Contact Us</div>
+        <div class="outline-button rounded-[11px] bg-[#F6F9FE] px-8 py-3">Contact Us</div>
       </button>
     </div>
   </section>
