--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -2,59 +2,83 @@
 @tailwind components;
 @tailwind utilities;
 
-.oloren-gradient{
-    background: linear-gradient(52.03deg, #0D57ED 40.77%, #6843D8 82.17%);
+@property --a {
+  syntax: '<angle>';
+  inherits: false;
+  initial-value: 52.03deg;
 }
 
+.a:hover {
+  filter: brightness(85%);
+}
+
+.oloren-gradient {
+  background: linear-gradient(var(--a), #0D57ED 40.77%, #6843D8 82.17%);
+}
+
+.oloren-gradient>div:hover {
+  transition-timing-function: ease-in-out;
+  transition: 0.5s;
+  color: white;
+  background: rgba(51, 170, 51, 0)
+}
+
+.oloren-gradient:hover {
+  --a: 350deg;
+  transition: 0.5s;
+  transition-timing-function: ease-in-out;
+  filter: brightness(130%);
+}
 
 $burger--thickness: 4px;
+
 .burger {
-	$width: 28px;
+  $width: 28px;
 
-	display: inline-block;
+  display: inline-block;
   border: 0;
-	background: none;
-	outline: 0;
-	padding: 0;
-	cursor: pointer;
+  background: none;
+  outline: 0;
+  padding: 0;
+  cursor: pointer;
 
-	border-bottom: $burger--thickness solid currentColor;
-	width: $width;
+  border-bottom: $burger--thickness solid currentColor;
+  width: $width;
 
-	transition: border-bottom 1s ease-in-out;
-	-webkit-transition: border-bottom 1s ease-in-out;
+  transition: border-bottom 1s ease-in-out;
+  -webkit-transition: border-bottom 1s ease-in-out;
 
-	&::-moz-focus-inner {
-		border: 0;
-		padding: 0;
-	}
+  &::-moz-focus-inner {
+    border: 0;
+    padding: 0;
+  }
 
-	&:before {
-		content: "";
-		display: block;
-		border-bottom: $burger--thickness solid currentColor;
-		width: 100%;
-		margin-bottom: 5px;
-		transition: transform 0.5s ease-in-out;
-		-webkit-transition: -webkit-transform 0.5s ease-in-out;
-	}
+  &:before {
+    content: "";
+    display: block;
+    border-bottom: $burger--thickness solid currentColor;
+    width: 100%;
+    margin-bottom: 5px;
+    transition: transform 0.5s ease-in-out;
+    -webkit-transition: -webkit-transform 0.5s ease-in-out;
+  }
 
-	&:after {
-		content: "";
-		display: block;
-		border-bottom: $burger--thickness solid currentColor;
-		width: 100%;
-		margin-bottom: 5px;
-		transition: transform 0.5s ease-in-out;
-		-webkit-transition: -webkit-transform 0.5s ease-in-out;
-	}
+  &:after {
+    content: "";
+    display: block;
+    border-bottom: $burger--thickness solid currentColor;
+    width: 100%;
+    margin-bottom: 5px;
+    transition: transform 0.5s ease-in-out;
+    -webkit-transition: -webkit-transform 0.5s ease-in-out;
+  }
 }
 
 .burger-check {
   display: none;
 }
 
-.burger-check:checked ~ .burger {
+.burger-check:checked~.burger {
   border-bottom: $burger--thickness solid transparent;
   transition: border-bottom 0.8s ease-in-out;
   -webkit-transition: border-bottom 0.8s ease-in-out;
@@ -83,7 +107,7 @@ $navigation__transition: max-height 0.5s ease-in-out;
   transition: $navigation__transition;
 }
 
-.burger-check:checked ~ .navigation {
+.burger-check:checked~.navigation {
   max-height: 500px;
   transition: $navigation__transition;
 }
@@ -91,112 +115,417 @@ $navigation__transition: max-height 0.5s ease-in-out;
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200..900');
 
-.highlight .hll { background-color: #ffffcc }
-.highlight  { background: #f8f8f8; }
-.highlight .c { color: #408080; font-style: italic } /* Comment */
-.highlight .err { border: 1px solid #FF0000 } /* Error */
-.highlight .k { color: #008000; font-weight: bold } /* Keyword */
-.highlight .o { color: #666666 } /* Operator */
-.highlight .ch { color: #408080; font-style: italic } /* Comment.Hashbang */
-.highlight .cm { color: #408080; font-style: italic } /* Comment.Multiline */
-.highlight .cp { color: #BC7A00 } /* Comment.Preproc */
-.highlight .cpf { color: #408080; font-style: italic } /* Comment.PreprocFile */
-.highlight .c1 { color: #408080; font-style: italic } /* Comment.Single */
-.highlight .cs { color: #408080; font-style: italic } /* Comment.Special */
-.highlight .gd { color: #A00000 } /* Generic.Deleted */
-.highlight .ge { font-style: italic } /* Generic.Emph */
-.highlight .gr { color: #FF0000 } /* Generic.Error */
-.highlight .gh { color: #000080; font-weight: bold } /* Generic.Heading */
-.highlight .gi { color: #00A000 } /* Generic.Inserted */
-.highlight .go { color: #888888 } /* Generic.Output */
-.highlight .gp { color: #000080; font-weight: bold } /* Generic.Prompt */
-.highlight .gs { font-weight: bold } /* Generic.Strong */
-.highlight .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
-.highlight .gt { color: #0044DD } /* Generic.Traceback */
-.highlight .kc { color: #008000; font-weight: bold } /* Keyword.Constant */
-.highlight .kd { color: #008000; font-weight: bold } /* Keyword.Declaration */
-.highlight .kn { color: #008000; font-weight: bold } /* Keyword.Namespace */
-.highlight .kp { color: #008000 } /* Keyword.Pseudo */
-.highlight .kr { color: #008000; font-weight: bold } /* Keyword.Reserved */
-.highlight .kt { color: #B00040 } /* Keyword.Type */
-.highlight .m { color: #666666 } /* Literal.Number */
-.highlight .s { color: #BA2121 } /* Literal.String */
-.highlight .na { color: #7D9029 } /* Name.Attribute */
-.highlight .nb { color: #008000 } /* Name.Builtin */
-.highlight .nc { color: #0000FF; font-weight: bold } /* Name.Class */
-.highlight .no { color: #880000 } /* Name.Constant */
-.highlight .nd { color: #AA22FF } /* Name.Decorator */
-.highlight .ni { color: #999999; font-weight: bold } /* Name.Entity */
-.highlight .ne { color: #D2413A; font-weight: bold } /* Name.Exception */
-.highlight .nf { color: #0000FF } /* Name.Function */
-.highlight .nl { color: #A0A000 } /* Name.Label */
-.highlight .nn { color: #0000FF; font-weight: bold } /* Name.Namespace */
-.highlight .nt { color: #008000; font-weight: bold } /* Name.Tag */
-.highlight .nv { color: #19177C } /* Name.Variable */
-.highlight .ow { color: #AA22FF; font-weight: bold } /* Operator.Word */
-.highlight .w { color: #bbbbbb } /* Text.Whitespace */
-.highlight .mb { color: #666666 } /* Literal.Number.Bin */
-.highlight .mf { color: #666666 } /* Literal.Number.Float */
-.highlight .mh { color: #666666 } /* Literal.Number.Hex */
-.highlight .mi { color: #666666 } /* Literal.Number.Integer */
-.highlight .mo { color: #666666 } /* Literal.Number.Oct */
-.highlight .sa { color: #BA2121 } /* Literal.String.Affix */
-.highlight .sb { color: #BA2121 } /* Literal.String.Backtick */
-.highlight .sc { color: #BA2121 } /* Literal.String.Char */
-.highlight .dl { color: #BA2121 } /* Literal.String.Delimiter */
-.highlight .sd { color: #BA2121; font-style: italic } /* Literal.String.Doc */
-.highlight .s2 { color: #BA2121 } /* Literal.String.Double */
-.highlight .se { color: #BB6622; font-weight: bold } /* Literal.String.Escape */
-.highlight .sh { color: #BA2121 } /* Literal.String.Heredoc */
-.highlight .si { color: #BB6688; font-weight: bold } /* Literal.String.Interpol */
-.highlight .sx { color: #008000 } /* Literal.String.Other */
-.highlight .sr { color: #BB6688 } /* Literal.String.Regex */
-.highlight .s1 { color: #BA2121 } /* Literal.String.Single */
-.highlight .ss { color: #19177C } /* Literal.String.Symbol */
-.highlight .bp { color: #008000 } /* Name.Builtin.Pseudo */
-.highlight .fm { color: #0000FF } /* Name.Function.Magic */
-.highlight .vc { color: #19177C } /* Name.Variable.Class */
-.highlight .vg { color: #19177C } /* Name.Variable.Global */
-.highlight .vi { color: #19177C } /* Name.Variable.Instance */
-.highlight .vm { color: #19177C } /* Name.Variable.Magic */
-.highlight .il { color: #666666 } /* Literal.Number.Integer.Long */
-.highlight .n { color: #000000 } /* Literal.Number.Integer.Long */
-.highlight .p { color: #000000 } /* Literal.Number.Integer.Long */
+.highlight .hll {
+  background-color: #ffffcc
+}
+
+.highlight {
+  background: #f8f8f8;
+}
+
+.highlight .c {
+  color: #408080;
+  font-style: italic
+}
+
+/* Comment */
+.highlight .err {
+  border: 1px solid #FF0000
+}
+
+/* Error */
+.highlight .k {
+  color: #008000;
+  font-weight: bold
+}
+
+/* Keyword */
+.highlight .o {
+  color: #666666
+}
+
+/* Operator */
+.highlight .ch {
+  color: #408080;
+  font-style: italic
+}
+
+/* Comment.Hashbang */
+.highlight .cm {
+  color: #408080;
+  font-style: italic
+}
+
+/* Comment.Multiline */
+.highlight .cp {
+  color: #BC7A00
+}
+
+/* Comment.Preproc */
+.highlight .cpf {
+  color: #408080;
+  font-style: italic
+}
+
+/* Comment.PreprocFile */
+.highlight .c1 {
+  color: #408080;
+  font-style: italic
+}
+
+/* Comment.Single */
+.highlight .cs {
+  color: #408080;
+  font-style: italic
+}
+
+/* Comment.Special */
+.highlight .gd {
+  color: #A00000
+}
+
+/* Generic.Deleted */
+.highlight .ge {
+  font-style: italic
+}
+
+/* Generic.Emph */
+.highlight .gr {
+  color: #FF0000
+}
+
+/* Generic.Error */
+.highlight .gh {
+  color: #000080;
+  font-weight: bold
+}
+
+/* Generic.Heading */
+.highlight .gi {
+  color: #00A000
+}
+
+/* Generic.Inserted */
+.highlight .go {
+  color: #888888
+}
+
+/* Generic.Output */
+.highlight .gp {
+  color: #000080;
+  font-weight: bold
+}
+
+/* Generic.Prompt */
+.highlight .gs {
+  font-weight: bold
+}
+
+/* Generic.Strong */
+.highlight .gu {
+  color: #800080;
+  font-weight: bold
+}
+
+/* Generic.Subheading */
+.highlight .gt {
+  color: #0044DD
+}
+
+/* Generic.Traceback */
+.highlight .kc {
+  color: #008000;
+  font-weight: bold
+}
+
+/* Keyword.Constant */
+.highlight .kd {
+  color: #008000;
+  font-weight: bold
+}
+
+/* Keyword.Declaration */
+.highlight .kn {
+  color: #008000;
+  font-weight: bold
+}
+
+/* Keyword.Namespace */
+.highlight .kp {
+  color: #008000
+}
+
+/* Keyword.Pseudo */
+.highlight .kr {
+  color: #008000;
+  font-weight: bold
+}
+
+/* Keyword.Reserved */
+.highlight .kt {
+  color: #B00040
+}
+
+/* Keyword.Type */
+.highlight .m {
+  color: #666666
+}
+
+/* Literal.Number */
+.highlight .s {
+  color: #BA2121
+}
+
+/* Literal.String */
+.highlight .na {
+  color: #7D9029
+}
+
+/* Name.Attribute */
+.highlight .nb {
+  color: #008000
+}
+
+/* Name.Builtin */
+.highlight .nc {
+  color: #0000FF;
+  font-weight: bold
+}
+
+/* Name.Class */
+.highlight .no {
+  color: #880000
+}
+
+/* Name.Constant */
+.highlight .nd {
+  color: #AA22FF
+}
+
+/* Name.Decorator */
+.highlight .ni {
+  color: #999999;
+  font-weight: bold
+}
+
+/* Name.Entity */
+.highlight .ne {
+  color: #D2413A;
+  font-weight: bold
+}
+
+/* Name.Exception */
+.highlight .nf {
+  color: #0000FF
+}
+
+/* Name.Function */
+.highlight .nl {
+  color: #A0A000
+}
+
+/* Name.Label */
+.highlight .nn {
+  color: #0000FF;
+  font-weight: bold
+}
+
+/* Name.Namespace */
+.highlight .nt {
+  color: #008000;
+  font-weight: bold
+}
+
+/* Name.Tag */
+.highlight .nv {
+  color: #19177C
+}
+
+/* Name.Variable */
+.highlight .ow {
+  color: #AA22FF;
+  font-weight: bold
+}
+
+/* Operator.Word */
+.highlight .w {
+  color: #bbbbbb
+}
+
+/* Text.Whitespace */
+.highlight .mb {
+  color: #666666
+}
+
+/* Literal.Number.Bin */
+.highlight .mf {
+  color: #666666
+}
+
+/* Literal.Number.Float */
+.highlight .mh {
+  color: #666666
+}
+
+/* Literal.Number.Hex */
+.highlight .mi {
+  color: #666666
+}
+
+/* Literal.Number.Integer */
+.highlight .mo {
+  color: #666666
+}
+
+/* Literal.Number.Oct */
+.highlight .sa {
+  color: #BA2121
+}
+
+/* Literal.String.Affix */
+.highlight .sb {
+  color: #BA2121
+}
+
+/* Literal.String.Backtick */
+.highlight .sc {
+  color: #BA2121
+}
+
+/* Literal.String.Char */
+.highlight .dl {
+  color: #BA2121
+}
+
+/* Literal.String.Delimiter */
+.highlight .sd {
+  color: #BA2121;
+  font-style: italic
+}
+
+/* Literal.String.Doc */
+.highlight .s2 {
+  color: #BA2121
+}
+
+/* Literal.String.Double */
+.highlight .se {
+  color: #BB6622;
+  font-weight: bold
+}
+
+/* Literal.String.Escape */
+.highlight .sh {
+  color: #BA2121
+}
+
+/* Literal.String.Heredoc */
+.highlight .si {
+  color: #BB6688;
+  font-weight: bold
+}
+
+/* Literal.String.Interpol */
+.highlight .sx {
+  color: #008000
+}
+
+/* Literal.String.Other */
+.highlight .sr {
+  color: #BB6688
+}
+
+/* Literal.String.Regex */
+.highlight .s1 {
+  color: #BA2121
+}
+
+/* Literal.String.Single */
+.highlight .ss {
+  color: #19177C
+}
+
+/* Literal.String.Symbol */
+.highlight .bp {
+  color: #008000
+}
+
+/* Name.Builtin.Pseudo */
+.highlight .fm {
+  color: #0000FF
+}
+
+/* Name.Function.Magic */
+.highlight .vc {
+  color: #19177C
+}
+
+/* Name.Variable.Class */
+.highlight .vg {
+  color: #19177C
+}
+
+/* Name.Variable.Global */
+.highlight .vi {
+  color: #19177C
+}
+
+/* Name.Variable.Instance */
+.highlight .vm {
+  color: #19177C
+}
+
+/* Name.Variable.Magic */
+.highlight .il {
+  color: #666666
+}
+
+/* Literal.Number.Integer.Long */
+.highlight .n {
+  color: #000000
+}
+
+/* Literal.Number.Integer.Long */
+.highlight .p {
+  color: #000000
+}
+
+/* Literal.Number.Integer.Long */
 
 
 mark {
-    @apply bg-inherit;
+  @apply bg-inherit;
 }
 
 mark.gradient {
-background: -webkit-linear-gradient(top left, #1C62E7, #6942D7);
--webkit-background-clip: text;
--webkit-text-fill-color: transparent;
+  background: -webkit-linear-gradient(top left, #1C62E7, #6942D7);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .olorengradient {
-    background-image: linear-gradient(45deg, #1C62E7, #6942D7);
+  background-image: linear-gradient(45deg, #1C62E7, #6942D7);
 }
 
 html {
-    scroll-behavior: smooth;
-  }
+  scroll-behavior: smooth;
+}
 
 .cta {
-    background-image: linear-gradient(#84C7F7, #B4A1EB);
+  background-image: linear-gradient(#84C7F7, #B4A1EB);
 }
 
 aside {
-    @apply bg-neutral/50 p-4 text-black pl-8 -indent-6 rounded-md;
+  @apply bg-neutral/50 p-4 text-black pl-8 -indent-6 rounded-md;
 }
 
 
-aside::first-letter{
-    @apply text-xl;
+aside::first-letter {
+  @apply text-xl;
 }
 
 img {
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
 }
