--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1728,14 +1728,6 @@ body[dir="rtl"] .checkbox:checked,
   margin-top: auto !important;
   margin-bottom: auto !important;
 }
-.-mx-\[12\.5\%\] {
-  margin-left: -12.5%;
-  margin-right: -12.5%;
-}
-.my-8 {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
 .mt-4 {
   margin-top: 1rem;
 }
@@ -1760,17 +1752,14 @@ body[dir="rtl"] .checkbox:checked,
 .mt-6 {
   margin-top: 1.5rem;
 }
+.mb-8 {
+  margin-bottom: 2rem;
+}
 .-mb-4 {
   margin-bottom: -1rem;
 }
 .-mt-4 {
   margin-top: -1rem;
-}
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-.mb-8 {
-  margin-bottom: 2rem;
 }
 .block {
   display: block;
@@ -1813,12 +1802,6 @@ body[dir="rtl"] .checkbox:checked,
 .h-5 {
   height: 1.25rem;
 }
-.h-\[600px\] {
-  height: 600px;
-}
-.h-96 {
-  height: 24rem;
-}
 .w-full {
   width: 100%;
 }
@@ -1830,29 +1813,20 @@ body[dir="rtl"] .checkbox:checked,
   width: -moz-fit-content;
   width: fit-content;
 }
+.w-auto {
+  width: auto;
+}
 .w-2\/5 {
   width: 40%;
 }
 .w-10 {
   width: 2.5rem;
 }
-.w-auto {
-  width: auto;
-}
 .w-screen {
   width: 100vw;
 }
 .w-3\/4 {
   width: 75%;
-}
-.w-3\/5 {
-  width: 60%;
-}
-.w-\[125\%\] {
-  width: 125%;
-}
-.w-\[55\%\] {
-  width: 55%;
 }
 .max-w-7xl {
   max-width: 80rem;
@@ -1936,9 +1910,6 @@ body[dir="rtl"] .checkbox:checked,
   margin-right: calc(2.5rem * var(--tw-space-x-reverse));
   margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
-.overflow-hidden {
-  overflow: hidden;
-}
 .rounded-md {
   border-radius: 0.375rem;
 }
@@ -1958,17 +1929,13 @@ body[dir="rtl"] .checkbox:checked,
   --tw-border-opacity: 1;
   border-color: hsl(var(--b3, var(--b2)) / var(--tw-border-opacity));
 }
-.bg-\[\#F6F9FE\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(246 249 254 / var(--tw-bg-opacity));
-}
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
-.bg-black {
+.bg-\[\#F6F9FE\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  background-color: rgb(246 249 254 / var(--tw-bg-opacity));
 }
 .p-3 {
   padding: 0.75rem;
@@ -2110,69 +2077,96 @@ body[dir="rtl"] .checkbox:checked,
           text-decoration-line: underline;
 }
 
-.oloren-gradient{
-    background: linear-gradient(52.03deg, #0D57ED 40.77%, #6843D8 82.17%);
+@property --a {
+  syntax: '<angle>';
+  inherits: false;
+  initial-value: 52.03deg;
 }
 
+.a:hover {
+  filter: brightness(85%);
+}
+
+.oloren-gradient {
+  background: linear-gradient(var(--a), #0D57ED 40.77%, #6843D8 82.17%);
+}
+
+.oloren-gradient>div:hover {
+  transition-timing-function: ease-in-out;
+  transition: 0.5s;
+  color: white;
+  background: rgba(51, 170, 51, 0)
+}
+
+.oloren-gradient:hover {
+  --a: 350deg;
+  transition: 0.5s;
+  transition-timing-function: ease-in-out;
+  filter: brightness(130%);
+}
 
 $burger--thickness: 4px;
+
 .burger {
-	$width: 28px;
+  $width: 28px;
 
-	display: inline-block;
+  display: inline-block;
   border: 0;
-	background: none;
-	outline: 0;
-	padding: 0;
-	cursor: pointer;
+  background: none;
+  outline: 0;
+  padding: 0;
+  cursor: pointer;
 
-	border-bottom: $burger--thickness solid currentColor;
-	width: $width;
+  border-bottom: $burger--thickness solid currentColor;
+  width: $width;
 
-	transition: border-bottom 1s ease-in-out;
-	-webkit-transition: border-bottom 1s ease-in-out;
+  transition: border-bottom 1s ease-in-out;
+  -webkit-transition: border-bottom 1s ease-in-out;
 }
+
 .burger::-moz-focus-inner {
-		border: 0;
-		padding: 0;
-	}
+    border: 0;
+    padding: 0;
+  }
+
 .burger:before {
-		content: "";
-		display: block;
-		border-bottom: $burger--thickness solid currentColor;
-		width: 100%;
-		margin-bottom: 5px;
-		transition: transform 0.5s ease-in-out;
-		-webkit-transition: -webkit-transform 0.5s ease-in-out;
-	}
+    content: "";
+    display: block;
+    border-bottom: $burger--thickness solid currentColor;
+    width: 100%;
+    margin-bottom: 5px;
+    transition: transform 0.5s ease-in-out;
+    -webkit-transition: -webkit-transform 0.5s ease-in-out;
+  }
+
 .burger:after {
-		content: "";
-		display: block;
-		border-bottom: $burger--thickness solid currentColor;
-		width: 100%;
-		margin-bottom: 5px;
-		transition: transform 0.5s ease-in-out;
-		-webkit-transition: -webkit-transform 0.5s ease-in-out;
-	}
+    content: "";
+    display: block;
+    border-bottom: $burger--thickness solid currentColor;
+    width: 100%;
+    margin-bottom: 5px;
+    transition: transform 0.5s ease-in-out;
+    -webkit-transition: -webkit-transform 0.5s ease-in-out;
+  }
 
 .burger-check {
   display: none;
 }
 
-.burger-check:checked ~ .burger {
+.burger-check:checked~.burger {
   border-bottom: $burger--thickness solid transparent;
   transition: border-bottom 0.8s ease-in-out;
   -webkit-transition: border-bottom 0.8s ease-in-out;
 }
 
-.burger-check:checked ~ .burger:before {
+.burger-check:checked~.burger:before {
     transform: rotate(-405deg) translateY(1px) translateX(-3px);
     -webkit-transform: rotate(-405deg) translateY(1px) translateX(-3px);
     transition: transform 0.5s ease-in-out;
     -webkit-transition: -webkit-transform 0.5s ease-in-out;
   }
 
-.burger-check:checked ~ .burger:after {
+.burger-check:checked~.burger:after {
     transform: rotate(405deg) translateY(-4px) translateX(-5px);
     -webkit-transform: rotate(405deg) translateY(-4px) translateX(-5px);
     transition: transform 0.5s ease-in-out;
@@ -2188,7 +2182,7 @@ $navigation__transition: max-height 0.5s ease-in-out;
   transition: $navigation__transition;
 }
 
-.burger-check:checked ~ .navigation {
+.burger-check:checked~.navigation {
   max-height: 500px;
   transition: $navigation__transition;
 }
@@ -2196,77 +2190,382 @@ $navigation__transition: max-height 0.5s ease-in-out;
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200..900');
 
-.highlight .hll { background-color: #ffffcc }
-.highlight  { background: #f8f8f8; }
-.highlight .c { color: #408080; font-style: italic } /* Comment */
-.highlight .err { border: 1px solid #FF0000 } /* Error */
-.highlight .k { color: #008000; font-weight: bold } /* Keyword */
-.highlight .o { color: #666666 } /* Operator */
-.highlight .ch { color: #408080; font-style: italic } /* Comment.Hashbang */
-.highlight .cm { color: #408080; font-style: italic } /* Comment.Multiline */
-.highlight .cp { color: #BC7A00 } /* Comment.Preproc */
-.highlight .cpf { color: #408080; font-style: italic } /* Comment.PreprocFile */
-.highlight .c1 { color: #408080; font-style: italic } /* Comment.Single */
-.highlight .cs { color: #408080; font-style: italic } /* Comment.Special */
-.highlight .gd { color: #A00000 } /* Generic.Deleted */
-.highlight .ge { font-style: italic } /* Generic.Emph */
-.highlight .gr { color: #FF0000 } /* Generic.Error */
-.highlight .gh { color: #000080; font-weight: bold } /* Generic.Heading */
-.highlight .gi { color: #00A000 } /* Generic.Inserted */
-.highlight .go { color: #888888 } /* Generic.Output */
-.highlight .gp { color: #000080; font-weight: bold } /* Generic.Prompt */
-.highlight .gs { font-weight: bold } /* Generic.Strong */
-.highlight .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
-.highlight .gt { color: #0044DD } /* Generic.Traceback */
-.highlight .kc { color: #008000; font-weight: bold } /* Keyword.Constant */
-.highlight .kd { color: #008000; font-weight: bold } /* Keyword.Declaration */
-.highlight .kn { color: #008000; font-weight: bold } /* Keyword.Namespace */
-.highlight .kp { color: #008000 } /* Keyword.Pseudo */
-.highlight .kr { color: #008000; font-weight: bold } /* Keyword.Reserved */
-.highlight .kt { color: #B00040 } /* Keyword.Type */
-.highlight .m { color: #666666 } /* Literal.Number */
-.highlight .s { color: #BA2121 } /* Literal.String */
-.highlight .na { color: #7D9029 } /* Name.Attribute */
-.highlight .nb { color: #008000 } /* Name.Builtin */
-.highlight .nc { color: #0000FF; font-weight: bold } /* Name.Class */
-.highlight .no { color: #880000 } /* Name.Constant */
-.highlight .nd { color: #AA22FF } /* Name.Decorator */
-.highlight .ni { color: #999999; font-weight: bold } /* Name.Entity */
-.highlight .ne { color: #D2413A; font-weight: bold } /* Name.Exception */
-.highlight .nf { color: #0000FF } /* Name.Function */
-.highlight .nl { color: #A0A000 } /* Name.Label */
-.highlight .nn { color: #0000FF; font-weight: bold } /* Name.Namespace */
-.highlight .nt { color: #008000; font-weight: bold } /* Name.Tag */
-.highlight .nv { color: #19177C } /* Name.Variable */
-.highlight .ow { color: #AA22FF; font-weight: bold } /* Operator.Word */
-.highlight .w { color: #bbbbbb } /* Text.Whitespace */
-.highlight .mb { color: #666666 } /* Literal.Number.Bin */
-.highlight .mf { color: #666666 } /* Literal.Number.Float */
-.highlight .mh { color: #666666 } /* Literal.Number.Hex */
-.highlight .mi { color: #666666 } /* Literal.Number.Integer */
-.highlight .mo { color: #666666 } /* Literal.Number.Oct */
-.highlight .sa { color: #BA2121 } /* Literal.String.Affix */
-.highlight .sb { color: #BA2121 } /* Literal.String.Backtick */
-.highlight .sc { color: #BA2121 } /* Literal.String.Char */
-.highlight .dl { color: #BA2121 } /* Literal.String.Delimiter */
-.highlight .sd { color: #BA2121; font-style: italic } /* Literal.String.Doc */
-.highlight .s2 { color: #BA2121 } /* Literal.String.Double */
-.highlight .se { color: #BB6622; font-weight: bold } /* Literal.String.Escape */
-.highlight .sh { color: #BA2121 } /* Literal.String.Heredoc */
-.highlight .si { color: #BB6688; font-weight: bold } /* Literal.String.Interpol */
-.highlight .sx { color: #008000 } /* Literal.String.Other */
-.highlight .sr { color: #BB6688 } /* Literal.String.Regex */
-.highlight .s1 { color: #BA2121 } /* Literal.String.Single */
-.highlight .ss { color: #19177C } /* Literal.String.Symbol */
-.highlight .bp { color: #008000 } /* Name.Builtin.Pseudo */
-.highlight .fm { color: #0000FF } /* Name.Function.Magic */
-.highlight .vc { color: #19177C } /* Name.Variable.Class */
-.highlight .vg { color: #19177C } /* Name.Variable.Global */
-.highlight .vi { color: #19177C } /* Name.Variable.Instance */
-.highlight .vm { color: #19177C } /* Name.Variable.Magic */
-.highlight .il { color: #666666 } /* Literal.Number.Integer.Long */
-.highlight .n { color: #000000 } /* Literal.Number.Integer.Long */
-.highlight .p { color: #000000 } /* Literal.Number.Integer.Long */
+.highlight .hll {
+  background-color: #ffffcc
+}
+
+.highlight {
+  background: #f8f8f8;
+}
+
+.highlight .c {
+  color: #408080;
+  font-style: italic
+}
+
+/* Comment */
+.highlight .err {
+  border: 1px solid #FF0000
+}
+
+/* Error */
+.highlight .k {
+  color: #008000;
+  font-weight: bold
+}
+
+/* Keyword */
+.highlight .o {
+  color: #666666
+}
+
+/* Operator */
+.highlight .ch {
+  color: #408080;
+  font-style: italic
+}
+
+/* Comment.Hashbang */
+.highlight .cm {
+  color: #408080;
+  font-style: italic
+}
+
+/* Comment.Multiline */
+.highlight .cp {
+  color: #BC7A00
+}
+
+/* Comment.Preproc */
+.highlight .cpf {
+  color: #408080;
+  font-style: italic
+}
+
+/* Comment.PreprocFile */
+.highlight .c1 {
+  color: #408080;
+  font-style: italic
+}
+
+/* Comment.Single */
+.highlight .cs {
+  color: #408080;
+  font-style: italic
+}
+
+/* Comment.Special */
+.highlight .gd {
+  color: #A00000
+}
+
+/* Generic.Deleted */
+.highlight .ge {
+  font-style: italic
+}
+
+/* Generic.Emph */
+.highlight .gr {
+  color: #FF0000
+}
+
+/* Generic.Error */
+.highlight .gh {
+  color: #000080;
+  font-weight: bold
+}
+
+/* Generic.Heading */
+.highlight .gi {
+  color: #00A000
+}
+
+/* Generic.Inserted */
+.highlight .go {
+  color: #888888
+}
+
+/* Generic.Output */
+.highlight .gp {
+  color: #000080;
+  font-weight: bold
+}
+
+/* Generic.Prompt */
+.highlight .gs {
+  font-weight: bold
+}
+
+/* Generic.Strong */
+.highlight .gu {
+  color: #800080;
+  font-weight: bold
+}
+
+/* Generic.Subheading */
+.highlight .gt {
+  color: #0044DD
+}
+
+/* Generic.Traceback */
+.highlight .kc {
+  color: #008000;
+  font-weight: bold
+}
+
+/* Keyword.Constant */
+.highlight .kd {
+  color: #008000;
+  font-weight: bold
+}
+
+/* Keyword.Declaration */
+.highlight .kn {
+  color: #008000;
+  font-weight: bold
+}
+
+/* Keyword.Namespace */
+.highlight .kp {
+  color: #008000
+}
+
+/* Keyword.Pseudo */
+.highlight .kr {
+  color: #008000;
+  font-weight: bold
+}
+
+/* Keyword.Reserved */
+.highlight .kt {
+  color: #B00040
+}
+
+/* Keyword.Type */
+.highlight .m {
+  color: #666666
+}
+
+/* Literal.Number */
+.highlight .s {
+  color: #BA2121
+}
+
+/* Literal.String */
+.highlight .na {
+  color: #7D9029
+}
+
+/* Name.Attribute */
+.highlight .nb {
+  color: #008000
+}
+
+/* Name.Builtin */
+.highlight .nc {
+  color: #0000FF;
+  font-weight: bold
+}
+
+/* Name.Class */
+.highlight .no {
+  color: #880000
+}
+
+/* Name.Constant */
+.highlight .nd {
+  color: #AA22FF
+}
+
+/* Name.Decorator */
+.highlight .ni {
+  color: #999999;
+  font-weight: bold
+}
+
+/* Name.Entity */
+.highlight .ne {
+  color: #D2413A;
+  font-weight: bold
+}
+
+/* Name.Exception */
+.highlight .nf {
+  color: #0000FF
+}
+
+/* Name.Function */
+.highlight .nl {
+  color: #A0A000
+}
+
+/* Name.Label */
+.highlight .nn {
+  color: #0000FF;
+  font-weight: bold
+}
+
+/* Name.Namespace */
+.highlight .nt {
+  color: #008000;
+  font-weight: bold
+}
+
+/* Name.Tag */
+.highlight .nv {
+  color: #19177C
+}
+
+/* Name.Variable */
+.highlight .ow {
+  color: #AA22FF;
+  font-weight: bold
+}
+
+/* Operator.Word */
+.highlight .w {
+  color: #bbbbbb
+}
+
+/* Text.Whitespace */
+.highlight .mb {
+  color: #666666
+}
+
+/* Literal.Number.Bin */
+.highlight .mf {
+  color: #666666
+}
+
+/* Literal.Number.Float */
+.highlight .mh {
+  color: #666666
+}
+
+/* Literal.Number.Hex */
+.highlight .mi {
+  color: #666666
+}
+
+/* Literal.Number.Integer */
+.highlight .mo {
+  color: #666666
+}
+
+/* Literal.Number.Oct */
+.highlight .sa {
+  color: #BA2121
+}
+
+/* Literal.String.Affix */
+.highlight .sb {
+  color: #BA2121
+}
+
+/* Literal.String.Backtick */
+.highlight .sc {
+  color: #BA2121
+}
+
+/* Literal.String.Char */
+.highlight .dl {
+  color: #BA2121
+}
+
+/* Literal.String.Delimiter */
+.highlight .sd {
+  color: #BA2121;
+  font-style: italic
+}
+
+/* Literal.String.Doc */
+.highlight .s2 {
+  color: #BA2121
+}
+
+/* Literal.String.Double */
+.highlight .se {
+  color: #BB6622;
+  font-weight: bold
+}
+
+/* Literal.String.Escape */
+.highlight .sh {
+  color: #BA2121
+}
+
+/* Literal.String.Heredoc */
+.highlight .si {
+  color: #BB6688;
+  font-weight: bold
+}
+
+/* Literal.String.Interpol */
+.highlight .sx {
+  color: #008000
+}
+
+/* Literal.String.Other */
+.highlight .sr {
+  color: #BB6688
+}
+
+/* Literal.String.Regex */
+.highlight .s1 {
+  color: #BA2121
+}
+
+/* Literal.String.Single */
+.highlight .ss {
+  color: #19177C
+}
+
+/* Literal.String.Symbol */
+.highlight .bp {
+  color: #008000
+}
+
+/* Name.Builtin.Pseudo */
+.highlight .fm {
+  color: #0000FF
+}
+
+/* Name.Function.Magic */
+.highlight .vc {
+  color: #19177C
+}
+
+/* Name.Variable.Class */
+.highlight .vg {
+  color: #19177C
+}
+
+/* Name.Variable.Global */
+.highlight .vi {
+  color: #19177C
+}
+
+/* Name.Variable.Instance */
+.highlight .vm {
+  color: #19177C
+}
+
+/* Name.Variable.Magic */
+.highlight .il {
+  color: #666666
+}
+
+/* Literal.Number.Integer.Long */
+.highlight .n {
+  color: #000000
+}
+
+/* Literal.Number.Integer.Long */
+.highlight .p {
+  color: #000000
+}
+
+/* Literal.Number.Integer.Long */
 
 
 mark {
@@ -2274,21 +2573,21 @@ mark {
 }
 
 mark.gradient {
-background: -webkit-linear-gradient(top left, #1C62E7, #6942D7);
--webkit-background-clip: text;
--webkit-text-fill-color: transparent;
+  background: -webkit-linear-gradient(top left, #1C62E7, #6942D7);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .olorengradient {
-    background-image: linear-gradient(45deg, #1C62E7, #6942D7);
+  background-image: linear-gradient(45deg, #1C62E7, #6942D7);
 }
 
 html {
-    scroll-behavior: smooth;
-  }
+  scroll-behavior: smooth;
+}
 
 .cta {
-    background-image: linear-gradient(#84C7F7, #B4A1EB);
+  background-image: linear-gradient(#84C7F7, #B4A1EB);
 }
 
 aside {
@@ -2308,9 +2607,9 @@ aside::first-letter {
 }
 
 img {
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .prose-headings\:font-medium :is(:where(h1, h2, h3, h4, h5, h6, th):not(:where([class~="not-prose"] *))) {
@@ -2343,11 +2642,6 @@ img {
 
 .prose-figcaption\:text-center :is(:where(figcaption):not(:where([class~="not-prose"] *))) {
   text-align: center;
-}
-
-.prose-figcaption\:text-secondary :is(:where(figcaption):not(:where([class~="not-prose"] *))) {
-  --tw-text-opacity: 1;
-  color: hsl(var(--s) / var(--tw-text-opacity));
 }
 
 .prose-figcaption\:text-primary :is(:where(figcaption):not(:where([class~="not-prose"] *))) {
@@ -2392,10 +2686,6 @@ img {
 
 @media (min-width: 768px) {
 
-  .md\:grid {
-    display: grid;
-  }
-
   .md\:w-3\/4 {
     width: 75%;
   }
@@ -2404,21 +2694,8 @@ img {
     max-width: 80rem;
   }
 
-  .md\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
   .md\:flex-row {
     flex-direction: row;
-  }
-
-  .md\:gap-x-6 {
-    -moz-column-gap: 1.5rem;
-         column-gap: 1.5rem;
-  }
-
-  .md\:gap-y-12 {
-    row-gap: 3rem;
   }
 
   .md\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
@@ -2664,8 +2941,8 @@ img {
     width: 75%;
   }
 
-  .lg\:w-\[65\%\] {
-    width: 65%;
+  .lg\:w-\[73\%\] {
+    width: 73%;
   }
 
   .lg\:w-1\/2 {
@@ -2674,26 +2951,6 @@ img {
 
   .lg\:w-1\/3 {
     width: 33.333333%;
-  }
-
-  .lg\:w-2\/3 {
-    width: 66.666667%;
-  }
-
-  .lg\:w-\[80\%\] {
-    width: 80%;
-  }
-
-  .lg\:w-\[78\%\] {
-    width: 78%;
-  }
-
-  .lg\:w-\[75\%\] {
-    width: 75%;
-  }
-
-  .lg\:w-\[73\%\] {
-    width: 73%;
   }
 
   .lg\:grid-cols-3 {
