--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,9 +81,9 @@
         <a href="{{site.url}}/#blogs">Blog</a>
       </div>
 
-      <button class="olorengradient h-fit w-fit rounded-xl p-px">
+      <a class="olorengradient h-fit w-fit rounded-xl p-px" href="mailto:contact@oloren.ai">
         <div class="outline-button rounded-[11px] bg-[#F6F9FE] px-8 py-3">Contact Us</div>
-      </button>
+      </a>
     </div>
   </section>
 
