fixing nav bar and slight changes

--- a/_includes/navbar-colored-bg.html
+++ b/_includes/navbar-colored-bg.html
@@ -7,8 +7,7 @@
     class="h-full w-fit" id="logo" />
   </a>
 
-  <a href="{{site.url}}/#chemengine">Technology</a>
-  <a href="https://beta.oloren.ai">Products</a>
-  <a href="{{site.url}}/#demo">Demo</a>
+  <a href="{{site.url}}/#system">System</a>
+  <a href="{{site.url}}/#extensions">Extensions</a>
   <a href="{{site.url}}/#blogs">Blogs</a>
 </section>
