--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,8 +44,8 @@
             id="navigation1"
             class="float navigation flex flex-col items-end px-1"
           >
-            <a href="{{site.url}}/#technology">Technology</a>
-            <a href="{{site.url}}/#products">Products</a>
+            <a href="{{site.url}}/#system">System</a>
+            <a href="{{site.url}}/#extensions">Extensions</a>
             <a href="https://beta.oloren.ai">Demo</a>
             <a href="{{site.url}}/#blogs">Blog</a>
           </nav>
@@ -63,8 +63,8 @@
           id="links"
           class="font-lg flex flex-row items-center space-x-10 text-secondary"
         >
-          <a href="{{site.url}}/#technology">Technology</a>
-          <a href="{{site.url}}/#products">Products</a>
+          <a href="{{site.url}}/#system">Systems</a>
+          <a href="{{site.url}}/#extensions">Extensions</a>
           <a href="{{site.url}}/blogs">Blog</a>
           <a
             class="olorengradient h-fit w-fit rounded-xl p-px"
@@ -90,8 +90,8 @@
         id="links"
         class="font-lg flex flex-col items-center space-y-2 text-left text-secondary"
       >
-        <a href="{{site.url}}/#technology">Technology</a>
-        <a href="{{site.url}}/#products">Products</a>
+        <a href="{{site.url}}/#system">System</a>
+        <a href="{{site.url}}/#extensions">Extensions</a>
         <a href="https://beta.oloren.ai">Demo</a>
         <a href="{{site.url}}/#blogs">Blog</a>
       </div>
