systems to system

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,7 @@
           id="links"
           class="font-lg flex flex-row items-center space-x-10 text-secondary"
         >
-          <a href="{{site.url}}/#system">Systems</a>
+          <a href="{{site.url}}/#system">System</a>
           <a href="{{site.url}}/#extensions">Extensions</a>
           <a href="{{site.url}}/blogs">Blog</a>
           <a
