adding orch copy

--- a/_includes/navbar-colored-bg.html
+++ b/_includes/navbar-colored-bg.html
@@ -7,6 +7,7 @@
     class="h-full w-fit" id="logo" />
   </a>
 
+  <a href="{{site.url}}/orchestrator.html">Orchestrator</a> 
   <a href="{{site.url}}/#system">System</a>
   <a href="{{site.url}}/#extensions">Extensions</a>
   <a href="{{site.url}}/#blogs">Blogs</a>
