--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,6 +44,7 @@
             id="navigation1"
             class="float navigation flex flex-col items-end px-1"
           >
+            <a href="{{site.url}}/orchestrator.html">Orchestrator</a>
             <a href="{{site.url}}/#system">System</a>
             <a href="{{site.url}}/#extensions">Extensions</a>
             <a href="https://beta.oloren.ai">Demo</a>
@@ -63,6 +64,7 @@
           id="links"
           class="font-lg flex flex-row items-center space-x-10 text-secondary"
         >
+          <a href="{{site.url}}/orchestrator.html">Orchestrator</a>
           <a href="{{site.url}}/#system">System</a>
           <a href="{{site.url}}/#extensions">Extensions</a>
           <a href="{{site.url}}/blogs">Blog</a>
@@ -90,6 +92,7 @@
         id="links"
         class="font-lg flex flex-col items-center space-y-2 text-left text-secondary"
       >
+        <a href="{{site.url}}/orchestrator.html">Orchestrator</a> 
         <a href="{{site.url}}/#system">System</a>
         <a href="{{site.url}}/#extensions">Extensions</a>
         <a href="https://beta.oloren.ai">Demo</a>
