nav bar changes

--- a/_includes/navbar-colored-bg.html
+++ b/_includes/navbar-colored-bg.html
@@ -8,7 +8,5 @@
   </a>
 
   <a href="{{site.url}}/orchestrator.html">Orchestrator</a> 
-  <a href="{{site.url}}/#system">System</a>
-  <a href="{{site.url}}/#extensions">Extensions</a>
-  <a href="{{site.url}}/#blogs">Blogs</a>
+  <a href="{{site.url}}/interfacepro.html">Interface Pro</a>
 </section>
