--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,10 +45,8 @@
             class="float navigation flex flex-col items-end px-1"
           >
             <a href="{{site.url}}/orchestrator.html">Orchestrator</a>
-            <a href="{{site.url}}/#system">System</a>
-            <a href="{{site.url}}/#extensions">Extensions</a>
-            <a href="https://beta.oloren.ai">Demo</a>
-            <a href="{{site.url}}/#blogs">Blog</a>
+            <a href="{{site.url}}/interfacepro.html">Interface Pro</a>
+            <a href="mailto:contact@oloren.ai">Demo</a>
           </nav>
         </div>
       </section>
@@ -65,9 +63,7 @@
           class="font-lg flex flex-row items-center space-x-10 text-secondary"
         >
           <a href="{{site.url}}/orchestrator.html">Orchestrator</a>
-          <a href="{{site.url}}/#system">System</a>
-          <a href="{{site.url}}/#extensions">Extensions</a>
-          <a href="{{site.url}}/blogs">Blog</a>
+          <a href="{{site.url}}/interfacepro.html">Interface Pro</a>
           <a
             class="olorengradient h-fit w-fit rounded-xl p-px"
             href="mailto:contact@oloren.ai"
@@ -93,10 +89,8 @@
         class="font-lg flex flex-col items-center space-y-2 text-left text-secondary"
       >
         <a href="{{site.url}}/orchestrator.html">Orchestrator</a> 
-        <a href="{{site.url}}/#system">System</a>
-        <a href="{{site.url}}/#extensions">Extensions</a>
-        <a href="https://beta.oloren.ai">Demo</a>
-        <a href="{{site.url}}/#blogs">Blog</a>
+        <a href="{{site.url}}/interfacepro.html">Interface Pro</a>
+        <a href="mailto:contact@oloren.ai">Demo</a>
       </div>
 
       <a class="olorengradient h-fit w-fit rounded-xl p-px" href="mailto:contact@oloren.ai">
