--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3018,3 +3018,11 @@ img {
     line-height: 1.75rem;
   }
 }
+#examples ul {
+    list-style-type: disc;
+    padding-left: 20px;
+  }
+
+#examples ul li {
+    color: #3490dc; 
+  }
