new version of the copy

--- a/_includes/navbar-colored-bg.html
+++ b/_includes/navbar-colored-bg.html
@@ -9,4 +9,5 @@
 
   <a href="{{site.url}}/orchestrator.html">Orchestrator</a> 
   <a href="{{site.url}}/interfacepro.html">Interface Pro</a>
+  <a href="{{site.url}}/agents.html">LLM Agents</a> 
 </section>
