--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,6 +46,7 @@
           >
             <a href="{{site.url}}/orchestrator.html">Orchestrator</a>
             <a href="{{site.url}}/interfacepro.html">Interface Pro</a>
+            <a href="{{site.url}}/agents.html">LLM Agents</a> 
             <a href="mailto:contact@oloren.ai">Demo</a>
           </nav>
         </div>
@@ -64,6 +65,7 @@
         >
           <a href="{{site.url}}/orchestrator.html">Orchestrator</a>
           <a href="{{site.url}}/interfacepro.html">Interface Pro</a>
+          <a href="{{site.url}}/agents.html">LLM Agents</a>
           <a
             class="olorengradient h-fit w-fit rounded-xl p-px"
             href="mailto:contact@oloren.ai"
@@ -90,6 +92,7 @@
       >
         <a href="{{site.url}}/orchestrator.html">Orchestrator</a> 
         <a href="{{site.url}}/interfacepro.html">Interface Pro</a>
+        <a href="{{site.url}}/agents.html">LLM Agents</a>
         <a href="mailto:contact@oloren.ai">Demo</a>
       </div>
 
